# OpenMemory

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION_SUMMARY.md  README.md  Taskfile.yml  Why.md  docker-compose.prod.yml  docker-compose.services.yml  docker-compose.yml  namespaces.md  package-lock.json  package.json
examples/crewai/: .envrc  .mise.toml  CHANGELOG_LAUNCH_FLOW.md  FLOW_LAUNCHER_README.md  FLOW_UI_ARCHITECTURE.md  QUICKSTART.md  README.md  SCHEMA_VALIDATION.md  Taskfile.yml  flow_schema.py  improve-project-flow.yml  launch_flow.py  launch_flow_ui.py  main.py  pyproject.toml  requirements.txt  run_flow_ui.py  shell-security.yml  start_flow_ui.sh  test-crew-with-tools.py  test-first-agent.yml  test-llm.py  test-minimal-crew.py  test-simple-flow.yml  test-with-mcp.yml  test_flow_ui.py
examples/crewai/engineering_team_using_flow/: .gitignore  README.md  requirements.txt
examples/crewai/engineering_team_using_flow/src/engineering_team_using_flow/: main.py
examples/crewai/product_improvement_flow/: app.py
examples/crewai/product_improvement_flow/src/product_improvement_crew/: main.py
examples/py-sdk/crewai_memory_middleware/: .env.example  INTEGRATION_SUMMARY.md  QUICK_START.md  README.md  demo_setup.py  docker-compose.yml  pyproject.toml  test_integration.py
examples/py-sdk/crewai_memory_middleware/src/crewai_memory_middleware/: crew.py  main.py
examples/py-sdk/crewai_memory_middleware/src/crewai_memory_middleware/tools/: __init__.py  openmemory_tool.py
examples/py-sdk/crewai_project_improvement/: README.md  pyproject.toml
examples/py-sdk/crewai_project_improvement/src/crewai_project_improvement/: main.py
examples/py-sdk/crewai_project_improvement/src/crewai_project_improvement/crews/project_improvement/: project_improvement.py
sdk-py/: CHANGELOG.md  MIGRATION.md  README.md  pyproject.toml  test_agent_sdk.py
sdk-py/examples/: agent_examples.py
sdk-py/openmemory/: __init__.py  agent.py
service/mcp-feedback-enhanced/: .bumpversion.cfg  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.simple  LICENSE  Makefile  README.md  README.zh-CN.md  README.zh-TW.md  debug_websocket.html  docker-compose.yml  pyproject.toml  pytest.ini  release_body.md
service/mcp-feedback-enhanced/.github/workflows/: build-and-release.yml  build-desktop.yml  publish.yml
service/mcp-feedback-enhanced/RELEASE_NOTES/: CHANGELOG.en.md  CHANGELOG.md  CHANGELOG.zh-CN.md  CHANGELOG.zh-TW.md  README.md  SIMPLIFIED_WORKFLOW.md  template.md
service/mcp-feedback-enhanced/docs/: DESKTOP_BUILD.md  DESKTOP_BUILD_IMPROVEMENTS.md  DOCKER.md  WORKFLOWS.md
service/mcp-feedback-enhanced/docs/architecture/: README.md  api-reference.md  component-details.md  deployment-guide.md  interaction-flows.md  system-overview.md
service/mcp-feedback-enhanced/docs/en/: cache-management.md
service/mcp-feedback-enhanced/docs/en/ssh-remote/: browser-launch-issues.md
service/mcp-feedback-enhanced/docs/zh-CN/: cache-management.md
service/mcp-feedback-enhanced/docs/zh-CN/ssh-remote/: browser-launch-issues.md
service/mcp-feedback-enhanced/docs/zh-TW/: cache-management.md
service/mcp-feedback-enhanced/docs/zh-TW/ssh-remote/: browser-launch-issues.md
service/mcp-feedback-enhanced/examples/: README.md  docker-quickstart.ps1  docker-quickstart.sh  mcp-config-desktop.json  mcp-config-web.json
service/mcp-feedback-enhanced/scripts/: build_desktop.py  cleanup_cache.py  release.py  validate_message_codes.py  validate_workflows.py
service/mcp-feedback-enhanced/src-tauri/: Cargo.toml  generate_icons.py  pyproject.toml  tauri.conf.json
service/mcp-feedback-enhanced/src-tauri/python/mcp_feedback_enhanced_desktop/: desktop_app.py
service/mcp-feedback-enhanced/src-tauri/src/: lib.rs  main.rs
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/: __init__.py  __main__.py  debug.py  i18n.py  server.py
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/desktop_app/: __init__.py  desktop_app.py
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/desktop_release/: __init__.py
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/utils/: __init__.py  error_handler.py  memory_monitor.py  resource_manager.py
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/web/: __init__.py  main.py
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/web/constants/: __init__.py  message_codes.py
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/web/locales/en/: translation.json
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/web/locales/zh-CN/: translation.json
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/web/locales/zh-TW/: translation.json
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/web/models/: __init__.py  feedback_result.py  feedback_session.py
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/web/routes/: __init__.py  main_routes.py
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/web/static/: index.html
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/web/static/css/: audio-management.css  notification-settings.css  prompt-management.css  session-management.css  (+1 more)
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/web/templates/: feedback.html  index.html
service/mcp-feedback-enhanced/src/mcp_feedback_enhanced/web/utils/: __init__.py  browser.py  compression_config.py  compression_monitor.py  network.py  port_manager.py  session_cleanup_manager.py
service/mcp-feedback-enhanced/tests/: __init__.py  conftest.py
service/mcp-feedback-enhanced/tests/fixtures/: __init__.py  test_data.py
service/mcp-feedback-enhanced/tests/helpers/: __init__.py  manual_tooltip_test.html  mcp_client.py  test_utils.py
service/mcp-feedback-enhanced/tests/integration/: __init__.py  test_i18n_integration.py  test_mcp_workflow.py  test_web_integration.py
service/mcp-feedback-enhanced/tests/unit/: __init__.py  test_error_handler.py  test_gzip_compression.py  test_i18n_core.py  test_memory_monitor.py  test_port_manager.py  test_resource_manager.py  test_session_cleanup.py  test_web_ui.py
(+163 files in other folders)
