[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmemory-py"
version = "0.4.0"
authors = [
    {name = "OpenMemory Project", email = "bob@holacorp.net"},
]
description = "Brain-inspired memory system with agent registration and namespace management for Python applications"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
keywords = [
    "memory",
    "ai", 
    "vector-search",
    "brain-inspired",
    "embeddings",
    "semantic-search",
    "artificial-intelligence",
    "machine-learning",
    "nlp",
    "agent-registration",
    "namespace-management", 
    "multi-agent",
    "collaboration",
    "mcp-proxy"
]
dependencies = [
    # Zero dependencies - uses only Python standard library
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "build>=0.7.0",
]

[project.urls]
Homepage = "https://github.com/caviraoss/openmemory"
Documentation = "https://github.com/caviraoss/openmemory/tree/main/sdk-py"
Repository = "https://github.com/caviraoss/openmemory.git"
"Bug Reports" = "https://github.com/caviraoss/openmemory/issues"

[tool.setuptools.packages.find]
include = ["openmemory*"]

[tool.setuptools.package-data]
openmemory = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=openmemory --cov-report=term-missing"