[project]
name = "crewai-project-improvement-flow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crewai>=1.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ollama = ["langchain-community>=0.3.0"]
openai = ["langchain-openai>=0.2.0"]
anthropic = ["langchain-anthropic>=0.2.0"]
all-llms = [
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
]

[tool.setuptools]
py-modules = ["launch_flow", "main"]
