[project]
name = "crewai_project_improvement"
version = "0.1.0"
description = "crewai_project_improvement using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.4.1"
]

[project.scripts]
kickoff = "crewai_project_improvement.main:kickoff"
run_crew = "crewai_project_improvement.main:kickoff"
plot = "crewai_project_improvement.main:plot"
run_with_trigger = "crewai_project_improvement.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
